sandbox/output
StockProfit.cpp:49:9: error: use of undeclared identifier 'transactions'
        transactions.push_back(transaction);
        ^
StockProfit.cpp:54:9: error: use of undeclared identifier 'transactions'
        transactions.push_back(transaction);
        ^
StockProfit.cpp:56:12: error: use of undeclared identifier 'transactions'; did you mean 'transactions_'?
    return transactions;
           ^~~~~~~~~~~~
           transactions_
./StockProfit.hpp:34:25: note: 'transactions_' declared here
    vector<vector<int>> transactions_;
                        ^
3 errors generated.
make: *** [test] Error 1
